Fixed dockerfile for frontend

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 ### STAGE 1: Build ###
-FROM node:lts-alpine AS build
+FROM node:17-alpine AS build
 WORKDIR /app
 COPY package.json ./
 RUN npm install
