improved parser to incorporate counts and logic for finding by severity, allowing for intergration with angular-parse logic on docx template

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ app-settings.json
 
 # Version managers
 .tool-versions
+backend/src/config/config.json
+Vuln templates/Internal.yml
+Vuln templates/web.yml
